# elixir-libgodot-connector

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_godotcpp_android.sh  build_godotcpp_xcframework.sh  build_libgodot.sh  build_libgodot_xcframework.sh  build_prebuilt_debug.sh  build_prebuilt_dev.sh  build_prebuilt_release.sh  libgodot.h  mix.exs  run_editor.sh
.github/workflows/: release-precompiled.yml
lib/: libgodot_port.ex
lib/lib_godot_connector/: application.ex
lib/libgodot/: driver.ex
libgodot_framework/libgodot/: libgodot.h
libgodot_framework/libgodot.xcodeproj/: project.pbxproj
libgodot_framework/libgodot.xcodeproj/xcshareddata/xcschemes/: libgodot.xcscheme
samples/cpp_sample/: CMakeLists.txt
samples/cpp_sample/src/: main.cpp
samples/elixir_sample/: CMakeLists.txt  Makefile  README.md  mix.exs
samples/elixir_sample/lib/: libgodot.ex
samples/elixir_sample/lib/lib_godot_connector/: application.ex  event_receiver.ex  pinger.ex  precompiler.ex
src/: libgodot_port.cpp
test/: lib_godot_connector_test.exs
